--- a/src/Makefile
+++ b/src/Makefile
@@ -6,10 +6,10 @@ YACC = bison
 
 TARGET = compiler
 
-LEX_SRC = lexer.l
+LEX_SRC  = lexer.l
 YACC_SRC = parser.ypp
 
-LEX_GEN = lex.yy.c
+LEX_GEN  = lex.yy.c
 YACC_GEN = parser.tab.cpp
 YACC_HDR = parser.tab.hpp
 
@@ -20,27 +20,33 @@ SRC = \
 	procedure_table.cpp \
 	$(LEX_GEN) \
 	$(YACC_GEN)
-	
+
 OBJ = $(SRC:.cpp=.o)
 OBJ := $(OBJ:.c=.o)
 
+# ======= GŁÓWNY TARGET =======
 all: $(TARGET)
 
+# ======= LINKOWANIE =======
 $(TARGET): $(OBJ)
 	$(CXX) $(CXXFLAGS) -o $@ $^
 
-$(LEX_GEN): $(LEX_SRC) $(YACC_HDR)
-	$(LEX) $(LEX_SRC)
-
+# ======= BISON =======
 $(YACC_GEN) $(YACC_HDR): $(YACC_SRC)
 	$(YACC) -d $(YACC_SRC)
 
+# ======= FLEX =======
+$(LEX_GEN): $(LEX_SRC) $(YACC_HDR)
+	$(LEX) $(LEX_SRC)
+
+# ======= KOMPILACJA =======
 %.o: %.cpp
 	$(CXX) $(CXXFLAGS) -c $< -o $@
 
 %.o: %.c
 	$(CXX) $(CXXFLAGS) -c $< -o $@
 
+# ======= CLEAN =======
 clean:
 	rm -f $(TARGET) *.o $(LEX_GEN) $(YACC_GEN) $(YACC_HDR)
 
